--- a/Startseite.html
+++ b/Startseite.html
@@ -30,7 +30,7 @@
     <meta property="og:title" content="Startseite">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Startseite.html" data-home-page-title="Startseite" class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-sticky u-sticky-ce40 u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-sticky u-sticky-ce40 u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
           <img src="images/default-logo-5.png" class="u-logo-image u-logo-image-1">
         </a>
