change Kontakt page, fix Kontakt button in Start
add Flo picture in Kontakt page, fix linking of Kontakt button in Startseite

--- a/Startseite.html
+++ b/Startseite.html
@@ -81,7 +81,7 @@
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">Maximiere Dein Potenzial!<br>
         </h1>
         <p class="u-align-center u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500">Ich helfe dir dabei nachhaltig in Top-Form zu kommen.</p>
-        <a href="https://nicepage.studio" class="u-active-palette-2-base u-align-center u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-2-base u-btn u-button-style u-hover-palette-2-base u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Kontaktiere Mich</a>
+        <a href="Kontakt.html" class="u-active-palette-2-base u-align-center u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-2-base u-btn u-button-style u-hover-palette-2-base u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Kontaktiere Mich</a>
       </div>
     </section>
     <section class="u-align-center u-black u-clearfix u-container-align-center u-section-2" id="carousel_f80b">
