--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
     </section>
     <section class="u-align-center u-black u-clearfix u-container-align-center u-section-2" id="carousel_f80b">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-white u-btn-1" href="Service.html">Service</a>
-        </h2>
+        <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500">Service</h2>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-left u-container-style u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="0">
@@ -103,7 +101,7 @@
                   <li> Individuelle und ergebnisorientierte Trainingsplanung</li>
                   <li>Performance- und zielorientierte Ernährung mit genauer Kalorien- und Makronährstoffvorgabe</li>
                 </ul>
-                <a href="Service.html" class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-2">Mehr</a>
+                <a href="Service.html" class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-1">Mehr</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="0">
@@ -120,7 +118,7 @@
                   <li>Besprechung der Trainingssituation<br>
                   </li>
                 </ul>
-                <a href="Service.html" class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-3">Mehr</a>
+                <a href="Service.html" class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-2">Mehr</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="0">
@@ -135,7 +133,7 @@
                   <li> Live vor Ort oder Online via Skype/Zoom&nbsp;</li>
                   <li>Klassen: Mens Physique, Bodybuilding&nbsp;</li>
                 </ul>
-                <a href="Service.html" class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-4">Mehr</a>
+                <a href="Service.html" class="u-border-2 u-border-active-black u-border-hover-black u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-none u-radius-0 u-text-active-palette-3-base u-text-body-color u-text-hover-palette-3-base u-top-left-radius-0 u-top-right-radius-0 u-btn-3">Mehr</a>
               </div>
             </div>
           </div>
@@ -415,7 +413,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               </div>
               <div class="u-align-center-sm u-align-right-md u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
-                  <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246" title="Startseite">
+                  <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
                     <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
                   </a>
                 </div>
@@ -450,16 +448,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-left-cell u-size-43-md u-size-43-sm u-size-43-xs u-size-46-lg u-size-46-xl u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h3 class="u-text u-text-default u-text-1">Cookies &amp; Privacy</h3>
-                  <p class="u-text u-text-default u-text-2"> Wir verwenden Cookies auf unserer Website, um zu verstehen, wie du diese nutzt. Indem du auf „Zustimmen“ klickst, stimmst du deren Verwendung zu.<br>
-                    <br>
+                  <h3 class="u-text u-text-default u-text-1">Cookies &amp; Datenschutz</h3>
+                  <p class="u-text u-text-default u-text-2"> Diese Webseite verwendet Cookies. Durch die weitere Nutzung dieser Webseite stimmen Sie der Verwendung von Cookies zu.<br>
                     <a class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base x8ImWz u-btn-1" data-hook="consent-banner-view-policy-link" href="https://www.zilkcoaching.de/datenschutz" target="_self">Datenschutzerklärung</a>
                   </p>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-14-lg u-size-14-xl u-size-17-md u-size-17-sm u-size-17-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-2">
-                  <a href="###" class="u-btn u-button-confirm u-button-style u-palette-1-base u-btn-2">Confirm</a>
+                  <a href="###" class="u-btn u-button-confirm u-button-style u-palette-1-base u-btn-2">Verstanden</a>
                 </div>
               </div>
             </div>
