change sizing of results pics gallery in starting page for mobile devices
change sizing of results pics gallery in starting page for mobile devices

--- a/About.html
+++ b/About.html
@@ -107,19 +107,19 @@
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="3743" data-image-height="5615">
-                <img class="u-back-image u-expanded" src="images/pexels-mubarak-salam-12608580.jpg">
+                <img class="u-back-image u-expanded" src="images/rsz__mg_0628.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
             <div class="u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="4000" data-image-height="6000">
-                <img class="u-back-image u-expanded" src="images/pexels-jonathan-borba-12172219.jpg">
+                <img class="u-back-image u-expanded" src="images/rsz__mg_0624.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
             <div class="u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="3360" data-image-height="5040">
-                <img class="u-back-image u-expanded" src="images/pexels-fred-gonzales-12281345.jpg">
+                <img class="u-back-image u-expanded" src="images/rsz__mg_0615.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3"></div>
             </div>
@@ -352,15 +352,33 @@
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 212px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px;
   }
 }</style></section>
   
