--- a/Startseite.html
+++ b/Startseite.html
@@ -141,9 +141,9 @@
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-3" id="sec-0ca6">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Resultate</h2>
-        <div class="u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" id="carousel-d2d5" data-interval="5000" data-u-ride="carousel">
+        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" id="carousel-d2d5" data-interval="5000" data-u-ride="carousel">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
             <li data-u-target="#carousel-d2d5" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-d2d5" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
@@ -171,7 +171,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-2" data-image-width="2046" data-image-height="1363">
               <div class="u-back-slide">
@@ -182,7 +182,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-3" data-image-width="2047" data-image-height="1365">
               <div class="u-back-slide">
@@ -193,7 +193,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-4" data-image-width="978" data-image-height="652">
               <div class="u-back-slide">
@@ -204,7 +204,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-5" data-image-width="2005" data-image-height="1504">
               <div class="u-back-slide">
@@ -215,7 +215,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-6" data-image-width="1168" data-image-height="876">
               <div class="u-back-slide">
@@ -226,7 +226,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-7" data-image-width="2046" data-image-height="1535">
               <div class="u-back-slide">
@@ -237,7 +237,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-8" data-image-width="1169" data-image-height="877">
               <div class="u-back-slide">
@@ -248,7 +248,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-9" data-image-width="2046" data-image-height="1535">
               <div class="u-back-slide">
@@ -259,7 +259,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-10" data-image-width="1169" data-image-height="780">
               <div class="u-back-slide">
@@ -270,7 +270,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-11" data-image-width="1600" data-image-height="1060">
               <div class="u-back-slide">
@@ -281,7 +281,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-12" data-image-width="1124" data-image-height="749">
               <div class="u-back-slide">
@@ -292,7 +292,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-13" data-image-width="1438" data-image-height="1079">
               <div class="u-back-slide">
@@ -303,7 +303,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-14" data-image-width="2048" data-image-height="1483">
               <div class="u-back-slide">
@@ -314,7 +314,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-15" data-image-width="1124" data-image-height="749">
               <div class="u-back-slide">
@@ -325,7 +325,7 @@
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
               <style data-mode="SM"></style>
-              <style data-mode="XS"></style>
+              <style data-mode="XS" data-visited="true"></style>
             </div>
           </div>
           <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-d2d5" role="button" data-u-slide="prev">
@@ -578,15 +578,33 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 212px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px;
   }
 }</style></section>
   
