correct responsiveness for mobile devices

--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
           <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -74,30 +74,43 @@
         </nav>
       </div></header>
     <section class="skrollable skrollable-between u-align-left u-clearfix u-white u-section-1" id="carousel_2ea4" src="">
-      <div class="u-clearfix u-sheet u-valign-bottom-md u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-sheet-1">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-1" src="images/56874ab4-94e9-4616-bc41-3f96519b890c.png" data-image-width="500" data-image-height="500" data-animation-name="customAnimationIn" data-animation-duration="1500">
         <div class="u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-shape-rectangle u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-align-left u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">FLORIAN ZILK<br>
-              <br>
             </h2>
             <p class="u-align-left u-large-text u-text u-text-variant u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500"> Mein Name ist Flo Zilk und ich bin leidenschaftlicher Athlet und Coach im Bodybuilding Bereich. <br>
-              <br>Seit 2020 coache ich ambitionierte Menschen im Bereich Muskelaufbau, Fettabbau und Wettkampfvorbereitung und führe sie Hand in Hand mit meinem Wissen und meinen Erfahrungen zu ihren persönlichen Zielen.&nbsp;<br>
+              <br>Seit 2020 coache ich ambitionierte Menschen im Bereich Muskelaufbau, Fettabbau und&nbsp;<br>Wettkampfvorbereitung und&nbsp;<br>führe sie Hand in Hand mit&nbsp;meinem Wissen&nbsp;<br>und meinen Erfahrungen zu ihren&nbsp;<br>persönlichen Zielen.&nbsp;<br>
             </p>
           </div>
         </div>
       </div>
     </section>
     <section class="u-align-left u-clearfix u-section-2" id="sec-37f0">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="fr-view u-clearfix u-rich-text u-text u-text-1">
-          <p id="isPasted">Ich selbst trainiere bereits seit mehreren Jahren und meine Passion war es stets, die beste Version meiner selbst zu werden und so viel wie möglich zu lernen. Dadurch konnte ich dann auch anderen Menschen dabei helfen, dies zu erreichen.&nbsp;</p>
-          <p>Durch jahrelanges Selbststudium, in denen ich viele Sachen an mir selbst immer wieder ausprobiert habe und mich zusätzlich durchgehend selbst coachen lassen habe, hat sich mein Horizont enorm erweitert.&nbsp;</p>
-          <p>Aktuell werde ich selbst von AJ Morris gecoacht, einem der besten Natural Bodybuilding Coaches weltweit, um meine Fähigkeiten und mein Wissen in dem Bereich Coaching auf das nächste Level zu bringen.</p>
-          <p>Im Jahre 2021 stand ich dann schließlich selbst auf einer Bodybuilding Bühne und habe meine erste Wettkampfdiät bestritten. Hiermit konnte ich auch in diesem Bereich sehr wertvolle Erfahrungen für mich und meine Athleten sammeln.&nbsp;</p>
-          <p>Indem ich die Trainer Ausbildung zum lizenzierten Diplom Strength Coach im "Das Gym" in Wien absolvierte und eine weitere bevorstehende Ausbildung zum lizenzierten Ernährungsberater durch die Mac Nutrition University absolviere, bin ich in der Lage, meinen Mitgliedern in meinem Coaching Team stets mit dem besten und aktuellsten Wissen in den Bereichen Training und Ernährung weiterzuhelfen.&nbsp;</p>
-          <p>&nbsp;Durch das alles kann ich durchgehend eine bestmögliche Betreuung meiner Kunden gewährleisten - was mein Anspruch an mich selbst ist.&nbsp;</p>
-          <p>Werde auch du Teil des Teams und lass mich dir helfen, deine persönlichen Ziele gemeinsam mit mir an deiner Seite zu erreichen.</p>
+          <p id="isPasted">
+            <span style="font-size: 1.25rem;">Ich selbst trainiere bereits seit mehreren Jahren und meine Passion war es stets, die beste Version meiner selbst zu werden und so viel wie möglich zu lernen. Dadurch konnte ich dann auch anderen Menschen dabei helfen, dies zu erreichen.&nbsp;</span>
+          </p>
+          <p>
+            <span style="font-size: 1.25rem;">Durch jahrelanges Selbststudium, in denen ich viele Sachen an mir selbst immer wieder ausprobiert habe und mich zusätzlich durchgehend selbst coachen lassen habe, hat sich mein Horizont enorm erweitert.&nbsp;</span>
+          </p>
+          <p>
+            <span style="font-size: 1.25rem;">Aktuell werde ich selbst von AJ Morris gecoacht, einem der besten Natural Bodybuilding Coaches weltweit, um meine Fähigkeiten und mein Wissen in dem Bereich Coaching auf das nächste Level zu bringen.</span>
+          </p>
+          <p>
+            <span style="font-size: 1.25rem;">Im Jahre 2021 stand ich dann schließlich selbst auf einer Bodybuilding Bühne und habe meine erste Wettkampfdiät bestritten. Hiermit konnte ich auch in diesem Bereich sehr wertvolle Erfahrungen für mich und meine Athleten sammeln.&nbsp;</span>
+          </p>
+          <p>
+            <span style="font-size: 1.25rem;">Indem ich die Trainer Ausbildung zum lizenzierten Diplom Strength Coach im "Das Gym" in Wien absolvierte und eine weitere bevorstehende Ausbildung zum lizenzierten Ernährungsberater durch die Mac Nutrition University absolviere, bin ich in der Lage, meinen Mitgliedern in meinem Coaching Team stets mit dem besten und aktuellsten Wissen in den Bereichen Training und Ernährung weiterzuhelfen.&nbsp;</span>
+          </p>
+          <p>
+            <span style="font-size: 1.25rem;">&nbsp;Durch das alles kann ich durchgehend eine bestmögliche Betreuung meiner Kunden gewährleisten - was mein Anspruch an mich selbst ist.&nbsp;</span>
+          </p>
+          <p>
+            <span style="font-size: 1.25rem;">Werde auch du Teil des Teams und lass mich dir helfen, deine persönlichen Ziele gemeinsam mit mir an deiner Seite zu erreichen.</span>
+          </p>
         </div>
       </div>
     </section>
@@ -193,7 +206,7 @@
                 </div>
               </div>
               <div class="u-align-center-sm u-align-center-xs u-align-left-md u-align-right-lg u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-20 u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3">
+                <div class="u-container-layout u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
                   <div class="u-social-icons u-spacing-10 u-social-icons-1">
                     <a class="u-social-url" title="@flo_zilk" target="_blank" href="https://www.instagram.com/flo_zilk/"><span class="u-icon u-social-icon u-social-instagram u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-fc42"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-fc42"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
       z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
@@ -285,31 +298,9 @@
   margin: 0 auto 0 0;
 }
 
-@media (max-width: 1199px) {
-  .u-cookies-consent .u-sheet-1 {
-    min-height: 131px;
-  }
-
-  .u-cookies-consent .u-layout-cell-1 {
-    min-height: 125px;
-  }
-
-  .u-cookies-consent .u-text-1 {
-    margin-right: 0;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-cookies-consent .u-layout-cell-2 {
-    min-height: 125px;
-  }
-}
-
 @media (max-width: 991px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 106px;
+    min-height: 187px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
@@ -319,6 +310,10 @@
   .u-cookies-consent .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 0;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
@@ -352,33 +347,15 @@
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 212px;
+    min-height: 121px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 152px;
-  }
-
-  .u-cookies-consent .u-container-layout-1 {
-    padding-bottom: 30px;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .u-cookies-consent .u-text-1 {
-    margin-right: 20px;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 20px;
+    min-height: 100px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 152px;
-  }
-
-  .u-cookies-consent .u-container-layout-2 {
-    padding: 30px;
+    min-height: 15px;
   }
 }</style></section>
   
