--- a/Startseite.html
+++ b/Startseite.html
@@ -33,7 +33,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="de"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-80 u-header u-header" id="sec-cdb9"><div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <a href="Startseite.html" class="u-image u-logo u-image-1" data-image-width="3471" data-image-height="1246">
           <img src="images/Zilk_Coaching_WEISS.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -419,7 +419,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 </div>
               </div>
               <div class="u-align-center-sm u-align-center-xs u-align-left-md u-align-right-lg u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-20 u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3">
+                <div class="u-container-layout u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
                   <div class="u-social-icons u-spacing-10 u-social-icons-1">
                     <a class="u-social-url" title="@flo_zilk" target="_blank" href="https://www.instagram.com/flo_zilk/"><span class="u-icon u-social-icon u-social-instagram u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-fc42"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-fc42"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
       z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
@@ -511,31 +511,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   margin: 0 auto 0 0;
 }
 
-@media (max-width: 1199px) {
-  .u-cookies-consent .u-sheet-1 {
-    min-height: 131px;
-  }
-
-  .u-cookies-consent .u-layout-cell-1 {
-    min-height: 125px;
-  }
-
-  .u-cookies-consent .u-text-1 {
-    margin-right: 0;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 0;
-  }
-
-  .u-cookies-consent .u-layout-cell-2 {
-    min-height: 125px;
-  }
-}
-
 @media (max-width: 991px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 106px;
+    min-height: 187px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
@@ -545,6 +523,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
   .u-cookies-consent .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 0;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
@@ -578,33 +560,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 212px;
+    min-height: 121px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 152px;
-  }
-
-  .u-cookies-consent .u-container-layout-1 {
-    padding-bottom: 30px;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .u-cookies-consent .u-text-1 {
-    margin-right: 20px;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 20px;
+    min-height: 100px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 152px;
-  }
-
-  .u-cookies-consent .u-container-layout-2 {
-    padding: 30px;
+    min-height: 15px;
   }
 }</style></section>
   
