adjust about me page

--- a/About.html
+++ b/About.html
@@ -77,7 +77,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-section-1" src="" id="carousel_44fb">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1">
         <img class="u-image u-image-1" src="images/1d9dc25d-b981-4f33-befe-f78792dcf2b51.jfif" data-image-width="944" data-image-height="943">
         <div class="u-container-style u-grey-80 u-group u-group-1">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
@@ -418,33 +418,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 212px;
+    min-height: 121px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 152px;
-  }
-
-  .u-cookies-consent .u-container-layout-1 {
-    padding-bottom: 30px;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
-  .u-cookies-consent .u-text-1 {
-    margin-right: 20px;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 20px;
+    min-height: 100px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 152px;
-  }
-
-  .u-cookies-consent .u-container-layout-2 {
-    padding: 30px;
+    min-height: 15px;
   }
 }</style></section>
   
