add Impressum and Dataprotection page

--- a/Impressum.html
+++ b/Impressum.html
@@ -71,8 +71,44 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-0471">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
+    <section class="u-clearfix u-section-1" id="sec-8e60">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-1">
+          <p id="isPasted" style="text-align: left;">
+            <br>
+          </p>
+          <h2 style="text-align: left;">IMPRESSUM</h2>
+          <p style="text-align: left;">Impressum Angaben gemäß § 5 TMG</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <p style="text-align: left;">Florian Zilk</p>
+          <p style="text-align: left;">(Einzelunternehmer)</p>
+          <p style="text-align: left;">Propsteiweg 2</p>
+          <p style="text-align: left;">84503 Altötting</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <h5 style="text-align: left;">Kontakt:</h5>
+          <p style="text-align: left;">Telefon: +49 (0) 15120239180</p>
+          <p style="text-align: left;">E-Mail: flo@zilkcoaching.de</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <p style="text-align: left;">EU-Streitschlichtung Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: https://ec.europa.eu/consumers/odr/.</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <p style="text-align: left;">Unsere E-Mail-Adresse finden Sie oben im Impressum. Verbraucherstreitbeilegung/Universalschlichtungsstelle Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <p style="text-align: left;">Quelle: eRecht24</p>
+          <h1 style="text-align: left;">
+            <span style="line-height: 2.0;">&nbsp;</span>
+          </h1>
+        </div>
+      </div>
     </section>
     
     
