--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -71,8 +71,93 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-a508">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
+    <section class="u-clearfix u-section-1" id="sec-13bb">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-1">
+          <h2 id="isPasted" style="text-align: left;">Datenschutzerklärung</h2>
+          <p style="text-align: left;">Mit dieser Datenschutzerklärung möchten wir Sie über Art, Umfang und Zweck der Verarbeitung von personenbezogenen Daten (im Folgenden auch nur als "Daten" bezeichnet) aufklären. Personenbezogene Daten sind alle Daten, die einen persönlichen Bezug zu Ihnen aufweisen, z. B. Name, Adresse, E-Mail-Adresse oder Ihr Nutzerverhalten. Die Datenschutzerklärung gilt für alle von uns vorgenommene Daten-Verarbeitungsvorgänge sowohl im Rahmen unserer Kerntätigkeit als auch für die von uns vorgehaltenen Online-Medien.</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <h4 style="text-align: left;">Wer bei uns für die Datenverarbeitung verantwortlich ist</h4>
+          <p style="text-align: left;">Verantwortlich für die Datenverarbeitung ist:</p>
+          <p style="text-align: left;">Florian Zilk</p>
+          <p style="text-align: left;">Propsteiweg 2</p>
+          <p style="text-align: left;">84503 Altötting</p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <p style="text-align: left;">Telefon: +49 (0) 15120239180</p>
+          <p style="text-align: left;">E-Mail: <a href="mailto:flo@zilkcoaching.de">flo@zilkcoaching.de</a>
+          </p>
+          <p style="text-align: left;">
+            <br>
+          </p>
+          <h4 style="text-align: left;">Ihre Rechte nach der DSGVO</h4>
+          <p style="text-align: left;">Nach der DSGVO stehen Ihnen die nachfolgend aufgeführten Rechte zu, die Sie jederzeit bei dem in Ziffer 1. dieser Datenschutzerklärung genannten Verantwortlichen geltend machen können:</p>
+          <ul style="background: transparent; border: 0px; margin: 0px 0px 0px 0.5em; outline: 0px; padding: 0px 0px 0px 1.3em; vertical-align: baseline; list-style: disc; pointer-events: auto; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-variant-numeric: ; font-variant-east-asian: ; font-variant-alternates: ; font-weight: 400; font-stretch: ; font-size: 18px; line-height: normal; font-family: ; font-optical-sizing: ; font-kerning: ; font-feature-settings: ; font-variation-settings: ; color: rgb(var(--color_15)); letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;">
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">Recht auf Auskunft: Sie haben das Recht, von uns Auskunft darüber zu verlangen, ob und welche Daten wir von Ihnen verarbeiten.</p>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">Recht auf Berichtigung: Sie haben das Recht, die Berichtigung unrichtiger oder Vervollständigung unvollständiger Daten zu verlangen.</p>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">Recht auf Löschung: Sie haben das Recht, die Löschung Ihrer Daten zu verlangen.</p>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">Recht auf Einschränkung: Sie haben in bestimmten Fällen das Recht zu verlangen, dass wir Ihre Daten nur noch eingeschränkt bearbeiten.</p>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">Recht auf Datenübertragbarkeit: Sie haben das Recht zu verlangen, dass wir Ihnen oder einem anderen Verantwortlichen Ihre Daten in einem strukturierten, gängigen und maschinenlesebaren Format übermitteln.</p>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">Beschwerderecht: Sie haben das Recht, sich bei einer Aufsichtsbehörde zu beschweren. Zuständig ist die Aufsichtsbehörde Ihres üblichen Aufenthaltsortes, Ihres Arbeitsplatzes oder unseres Firmensitzes.</p>
+            </li>
+          </ul>
+          <p style="text-align: left;">&nbsp;</p>
+          <h6 style="text-align: left;">Widerrufsrecht</h6>
+          <p style="text-align: left;">Sie haben das Recht, die von Ihnen erteilte Einwilligung zur Datenverarbeitung jederzeit zu widerrufen.</p>
+          <p style="text-align: left;">&nbsp;</p>
+          <h6 style="text-align: left;">Widerspruchsrecht</h6>
+          <p style="text-align: left;">Sie haben das Recht, jederzeit gegen die Verarbeitung Ihrer Daten, die wir auf unser berechtigtes Interesse nach Art. 6 Abs. 1 lit. f DSGVO stützen, Widerspruch einzulegen. Sofern Sie von Ihrem Widerspruchsrecht Gebrauch machen, bitten wir Sie um die Darlegung der Gründe. Wir werden Ihre personenbezogenen Daten dann nicht mehr verarbeiten, es sei denn, wir können Ihnen gegenüber nachweisen, dass zwingende schutzwürdige Gründe an der Datenverarbeitung Ihre Interessen und Rechte überwiegen.</p>
+          <p style="text-align: left;">Unabhängig vom vorstehend Gesagten, haben Sie das jederzeitige Recht, der Verarbeitung Ihrer personenbezogenen Daten für Zwecke der Werbung und Datenanalyse zu widersprechen.</p>
+          <p style="text-align: left;">Ihren Widerspruch richten Sie bitte an die oben angegebene Kontaktadresse des Verantwortlichen.</p>
+          <p style="text-align: left;">&nbsp;</p>
+          <h4 style="text-align: left;">Wann löschen wir Ihre Daten?</h4>
+          <p style="text-align: left;">Wir löschen Ihre Daten dann, wenn wir diese nicht mehr brauchen oder Sie uns dies vorgeben. Das bedeutet, dass - sofern sich aus den einzelnen Datenschutzhinweisen dieser Datenschutzerklärung nichts anderes ergibt - wir Ihre Daten löschen,</p>
+          <ul style="background: transparent; border: 0px; margin: 0px 0px 0px 0.5em; outline: 0px; padding: 0px 0px 0px 1.3em; vertical-align: baseline; list-style: disc; pointer-events: auto; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-variant-numeric: ; font-variant-east-asian: ; font-variant-alternates: ; font-weight: 400; font-stretch: ; font-size: 18px; line-height: normal; font-family: ; font-optical-sizing: ; font-kerning: ; font-feature-settings: ; font-variation-settings: ; color: rgb(var(--color_15)); letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;">
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">wenn der Zweck der Datenverarbeitung weggefallen ist und damit die jeweilige in den einzelnen Datenschutzhinweisen genannte Rechtsgrundlage nicht mehr besteht, also bspw.</p>
+              <ul style="background: transparent; border: 0px; margin: 0px 0px 0px 0.5em; outline: 0px; padding: 0px 0px 0px 1.3em; vertical-align: baseline; list-style: circle; font-style: ; font-variant-ligatures: ; font-variant-caps: ; font-variant-numeric: ; font-variant-east-asian: ; font-variant-alternates: ; font-weight: ; font-stretch: ; font-size: 18px; line-height: normal; font-family: ; font-optical-sizing: ; font-kerning: ; font-feature-settings: ; font-variation-settings: ; color: rgb(var(--color_15)); letter-spacing: normal;">
+                <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+                  <p style="text-align: left;">nach Beendigung der zwischen uns bestehenden vertraglichen oder mitgliedschaftlichen Beziehungen (Art. 6 Abs. 1 lit. a DSGVO) oder</p>
+                </li>
+                <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+                  <p style="text-align: left;">nach Wegfall unseres berechtigten Interesses an der weiteren Verarbeitung oder Speicherung Ihrer Daten (Art. 6 Abs. 1 lit. f DSGVO),</p>
+                </li>
+              </ul>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">wenn Sie von Ihrem Widerrufsrecht Gebrauch machen und keine anderweitige gesetzliche Rechtsgrundlage für die Verarbeitung im Sinne von Art. 6 Abs. 1 lit. b-f DSGVO eingreift,</p>
+            </li>
+            <li style="background: transparent; border: 0px; margin: 0px; outline: 0px; padding: 0px; vertical-align: baseline; font-style: inherit; font-weight: inherit; letter-spacing: normal; line-height: inherit;">
+              <p style="text-align: left;">wenn Sie vom Ihrem Widerspruchsrecht Gebrauch machen und der Löschung keine zwingenden schutzwürdigen Gründe entgegenstehen.</p>
+            </li>
+          </ul>
+          <p style="text-align: left;">Sofern wir (bestimmte Teile) Ihre(r) Daten jedoch noch für andere Zwecke vorhalten müssen, weil dies etwa steuerliche Aufbewahrungsfristen (in der Regel 6 Jahre für Geschäftskorrespondenz bzw. 10 Jahre für Buchungsbelege) oder die Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen aus vertraglichen Beziehungen (bis zu vier Jahren) erforderlich machen oder die Daten zum Schutz der Rechte einer anderen natürlichen oder juristischen Person gebraucht werden, löschen wir (den Teil) Ihre(r) Daten erst nach Ablauf dieser Fristen. Bis zum Ablauf dieser Fristen beschränken wir die Verarbeitung dieser Daten jedoch auf diese Zwecke (Erfüllung der Aufbewahrungspflichten).</p>
+          <p style="text-align: left;">&nbsp;</p>
+          <h4 style="text-align: left;">Sicherheitsmaßnahmen</h4>
+          <p style="text-align: left;">Wir treffen im Übrigen technische und organisatorische Sicherheitsmaßnahmen nach dem Stand der Technik, um die Vorschriften der Datenschutzgesetze einzuhalten und Ihre Daten gegen zufällige oder vorsätzliche Manipulationen, teilweisen oder vollständigen Verlust, Zerstörung oder gegen den unbefugten Zugriff Dritter zu schützen.</p>
+          <p style="text-align: left;">&nbsp;</p>
+          <h4 style="text-align: left;">Aktualität und Änderung dieser Datenschutzerklärung</h4>
+          <p style="text-align: left;">Diese Datenschutzerklärung ist aktuell gültig und hat den Stand Juli 2022. Aufgrund geänderter gesetzlicher bzw. behördlicher Vorgaben kann es notwendig werden, diese Datenschutzerklärung anzupassen.</p>
+          <p style="text-align: left;">Diese Datenschutzerklärung wurde mit Hilfe des Datenschutz-Generators von SOS Recht erstellt. SOS Recht ist ein Angebot der Mueller.legal Rechtsanwälte Partnerschaft mit Sitz in Berlin.</p>
+          <h1 style="text-align: left;">
+            <span style="line-height: 2.0;">&nbsp;</span>
+          </h1>
+        </div>
+      </div>
     </section>
     
     
